--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -531,7 +531,7 @@ service vendor.esepmdaemon /system/vendor/bin/esepmdaemon
     group nfc
 
 service vendor.wcnss-service /system/bin/wcnss_service
-    class main
+    class late_start
     user system
     group system wifi radio
     oneshot
