--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -27,6 +27,7 @@
 
 import /vendor/etc/init/hw/init.mmi.rc
 import /vendor/etc/init/hw/init.potter.rc
+import /vendor/etc/init/hw/init.safailnet.rc
 
 on early-init
     mount debugfs debugfs /sys/kernel/debug
