potter: Mount and bind audio_policy_configuration in /vendor/etc/audio
* This fixes the following issue reported in log:

  APM::Serializer: deserialize: Could not parse
  /vendor/etc/audio/audio_policy_configuration.xml document.

[kubersharma001]
* Also bind mount in vendor/etc

Change-Id: I8b2717dcddb45eb045452bee9f7a39d7e15f58ff

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -264,6 +264,10 @@ on boot
     # default country code
     setprop ro.boot.wificountrycode 00
 
+on post-fs
+    mount none /system/etc/audio_policy_configuration.xml /vendor/etc/audio/audio_policy_configuration.xml bind
+    mount none /system/etc/audio_policy_configuration.xml /vendor/etc/audio_policy_configuration.xml bind
+
 # msm specific files that need to be created on /data
 on post-fs-data
     mkdir /tombstones/modem 0771 system system
