--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -62,7 +62,7 @@ on late-fs
     start surfaceflinger
     start bootanim
     start vendor.configstore-hal
-    start gralloc-2-0
+    start vendor.gralloc-2-0
 
     # mount RW partitions which need run fsck
     mount_all /vendor/etc/fstab.qcom --late
