--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -530,7 +530,7 @@ service vendor.esepmdaemon /system/vendor/bin/esepmdaemon
     user system
     group nfc
 
-service vendor.wcnss-service /system/bin/wcnss_service
+service wcnss-service /system/vendor/bin/wcnss_service
     class late_start
     user system
     group system wifi radio
