--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -531,7 +531,7 @@ service vendor.esepmdaemon /system/vendor/bin/esepmdaemon
     group nfc
 
 service wcnss-service /system/vendor/bin/wcnss_service
-    class late_start
+    class main
     user system
     group system wifi radio
     oneshot
