--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -945,3 +945,6 @@ on property:sys.boot_completed=1
     
     #WDSP FW boot sysfs node used by STHAL
     chown media audio /sys/kernel/wdsp0/boot
+
+    # Set perfd properties
+    setprop vendor.post_boot.parsed 1
