--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -918,6 +918,9 @@ on property:sys.boot_completed=1
     write /sys/devices/system/cpu/cpufreq/interactive/target_loads "85 1401600:80"
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 652800
 
+    # Enable dynamic stune boost configuration
+    write /sys/module/cpu_input_boost/parameters/dynamic_stune_boost 3
+
     # re-enable thermal & BCL core_control now
     write /sys/module/msm_thermal/core_control/enabled 1
     write /sys/devices/soc/soc:qcom,bcl/mode "disable"
