--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -552,6 +552,7 @@ service vendor.adsprpcd /system/vendor/bin/adsprpcd
     class main
     user media
     group media
+    disabled
 
 # Start AKM executable
 service ecompassd /system/vendor/bin/akmd09912
